47
================

25/06/23 Merge animal copies key fields now, same code for csv and forms #698
25/06/23 Add "weight" online form field for animals
24/06/23 Security fix to detect and drop invalid mode parameters to POST
23/06/23 Alerts for boarding animals entering/leaving today #623
23/06/23 Option to send form submissions to the fosterer #1183
23/06/23 Stop active movements being returned when boarding #623
23/06/23 Add "neutered" as online form field for animals
22/06/23 Delete on process should run from code.py for multistep autoprocess #1297
22/06/23 Assign shelter location/unit when boarding is active #623
22/06/23 Adding boarding permissions to roles screen #623
22/06/23 Adding boarding type with default cost #623
21/06/23 Add slideshow HTML template #905
21/06/23 Add animalviewcarousel template 
21/06/23 Option to specify the animalview template in adoptable_js
21/06/23 PetFinder: Fix new publishing issues with strays
21/06/23 Boarding: show fee column, create payment button #623
20/06/23 New (default) option to delete online forms on process #1297
19/06/23 Boarding: show relevant info in the animal banner #623
19/06/23 LicenceNumber wordkey for animal documents 
19/06/23 Boarding tabs, options and calendar view #623
19/06/23 Add CURRENT_DATE_FDM/LDM/FDY/LDY SQL tokens
18/06/23 animal.Adoptable checking for animal photos incorrectly
14/06/23 Location filters for internal locs should only apply to in care
14/06/23 PetFinder: Allow adopted animals to be sent with status X
12/06/23 Looking for can now match on animal flags #640
12/06/23 Automatic BuddyID microchip registration (any chip, US only)
12/06/23 Update description of existing animals via aimal CSV import
07/06/23 Use a lighter background for custom emblems
07/06/23 Fix other areas (email/pdf) to handle linked documents #1261
07/06/23 Shelter view group: Age Group and Litter
07/06/23 Shelter view groups: Location and Litter, Status and Location