@@ -35,6 +35,7 @@ const html = {
             return [ false, _("Hold until {0}").replace("{0}", format.date(a.HOLDUNTILDATE)) ]; 
         }
         if (a.HASFUTUREADOPTION == 1) { return [ false, _("Adopted") ]; }
+        if (a.HASACTIVEBOARDING == 1) { return [ false, _("Boarding") ]; }
         if (a.ISHOLD == 1 && p.indexOf("includehold") == -1) { return [ false, _("Hold") ]; }
         if (a.ISQUARANTINE == 1 && p.indexOf("includequarantine") == -1) { return [ false, _("Quarantine") ]; }
         if (a.DECEASEDDATE) { return [ false, _("Deceased") ]; }
